--- a/Share Beauty App/Base.lproj/LineDetailViewController.storyboard
+++ b/Share Beauty App/Base.lproj/LineDetailViewController.storyboard
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="ipad9_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -57,7 +57,7 @@
                                                                         <nil key="highlightedColor"/>
                                                                     </label>
                                                                 </subviews>
-                                                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="3i3-sj-VXM" secondAttribute="trailing" constant="10" id="6b6-1R-E5X"/>
                                                                     <constraint firstItem="3i3-sj-VXM" firstAttribute="top" secondItem="cLG-pa-29F" secondAttribute="bottom" id="Dzn-5l-zcg"/>
@@ -140,7 +140,7 @@
                                                                 </variation>
                                                             </view>
                                                         </subviews>
-                                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                         <constraints>
                                                             <constraint firstItem="yUA-jT-nSr" firstAttribute="top" secondItem="bx5-p7-wx4" secondAttribute="bottom" constant="20" id="Foi-Cx-nsm"/>
                                                             <constraint firstItem="bx5-p7-wx4" firstAttribute="top" secondItem="izS-g0-5Yg" secondAttribute="top" id="Nk9-vI-443"/>
@@ -151,7 +151,7 @@
                                                         </constraints>
                                                     </view>
                                                 </subviews>
-                                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                 <constraints>
                                                     <constraint firstItem="izS-g0-5Yg" firstAttribute="top" relation="greaterThanOrEqual" secondItem="0vD-bZ-L6Q" secondAttribute="top" id="0Vb-bb-3MY"/>
                                                     <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="izS-g0-5Yg" secondAttribute="bottom" id="Cmu-8p-Uln"/>
